name:                conditions
version:             0.0.0
synopsis:            Conditions for Haskell
description:         Condition system for Haskell.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2015 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Control.Condition
  build-depends:     base >= 4 && <5
                   , conduit >= 1.2.3.1
                   , conduit-extra >= 1.1.6.2
                   , csv-conduit >= 0.6.3
                   , resourcet >= 1.1.3.3
                   , transformers >= 0.4.2.0
